# misis2024s-23-18-chashin-m-y

./: .gitignore  CMakeLists.txt  README.md  codeforces.id  reports.md  status.md
bin.dbg/: command.txt  robocalc.ilk
prj.app/: CMakeLists.txt  robocalc.cpp
prj.cw/: CMakeLists.txt  readme.md
prj.cw/opencv_/: main.cpp  main.hpp  opencv_.cpp
prj.lab/: CMakeLists.txt
prj.lab/QueueLstPtr/: CMakeLists.txt  queuelstptr.cpp  queuelstptr.hpp
prj.lab/bitset/: CMakeLists.txt  bitset.cpp  bitset.hpp
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/dynarr/: CMakeLists.txt  dynarr.cpp  dynarr.hpp
prj.lab/queuearr/: CMakeLists.txt  queuearr.cpp  queuearr.hpp
prj.lab/queuelst/: CMakeLists.txt  queuelst.cpp  queuelst.hpp
prj.lab/queuelstpr/: CMakeLists.txt  queuelstpr.hpp  queuelstptr.cpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.hpp
prj.lab/stack/: CMakeLists.txt  stack.cpp  stack.hpp
prj.lab/stackarr/: CMakeLists.txt  stackarr.cpp  stackarr.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.hpp
prj.lab/stacklstt/: CMakeLists.txt  stacklstt.hpp
prj.test/: CMakeLists.txt  test_bitset.cpp  test_complex.cpp  test_dynarr.cpp  test_queuearr.cpp  test_queuelst.cpp  test_queuelstptr.cpp  test_rational.cpp  test_stack.cpp  test_stacklst.cpp
