add_subdirectory(complex)
add_subdirectory(rational)
add_subdirectory(dynarr)
add_subdirectory(dynarrt)
add_subdirectory(stackarr)
add_subdirectory(stackarrt)
add_subdirectory(stacklst)
add_subdirectory(stacklstt)
add_subdirectory(queuelst)
add_subdirectory(queuelstt)
add_subdirectory(queuearr)
add_subdirectory(queuearrt)
add_subdirectory(queuelstpr)
add_subdirectory(queuelstprt)
add_subdirectory(bitset)